<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/main_nav"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#242424">

    <RelativeLayout
            android:id="@+id/course_nav_titlebar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/black">

        <ImageView
                android:id="@+id/btn_back_normal"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/unit_back_bg"
                android:scaleType="centerCrop"/>

        <TextView
                android:id="@+id/course_nav_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/btn_back_normal"
                android:maxLines="2"
                android:text="@string/all_courses"
                android:textColor="@color/white"
                android:textSize="16sp"/>
    </RelativeLayout>

    <RadioGroup
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_nav_titlebar"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            >

        <RadioButton
                android:id="@+id/rb_1"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_courseintro"
                android:text="@string/course_intro"
                android:textColor="@drawable/module_tab_text_selector"/>

        <RadioButton
                android:id="@+id/rb_2"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_instructorintro"
                android:text="@string/instructor_intro"
                android:textColor="@drawable/module_tab_text_selector"/>

        <RadioButton
                android:id="@+id/rb_3"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_module"
                android:text="@string/course_module"
                android:textColor="@drawable/module_tab_text_selector"/>

        <RadioButton
                android:id="@+id/rb_4"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_disscuss"
                android:text="@string/discussion"
                android:textColor="@drawable/module_tab_text_selector"/>

        <RadioButton
                android:id="@+id/rb_5"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_announcement"
                android:text="@string/course_announment"
                android:textColor="@drawable/module_tab_text_selector"/>

        <RadioButton
                android:id="@+id/rb_6"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_user"
                android:text="@string/course_users"
                android:textColor="@drawable/module_tab_text_selector"/>

        <RadioButton
                android:id="@+id/rb_7"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_quiz"
                android:text="@string/quiz"
                android:textColor="@drawable/module_tab_text_selector"
                />

        <RadioButton
                android:id="@+id/rb_8"
                style="@style/module_tab_text"
                android:drawableLeft="@drawable/module_tab_assigment"
                android:text="@string/assignment"
                android:textColor="@drawable/module_tab_text_selector"/>
    </RadioGroup>

    <RelativeLayout
            android:id="@+id/rl_load_info"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true">

        <TextView
                android:id="@+id/tv_loaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="已下载视频:   个"
                android:textColor="@color/module_nav_text_normal"
                android:textSize="15sp"/>

        <RelativeLayout
                android:id="@+id/rl_load_badge"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

            <TextView
                    android:id="@+id/tv_load_all_course"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_downloadall"
                    android:gravity="center_vertical"
                    android:text="@string/load_course_all_video"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            <TextView
                    android:id="@+id/iv_badge"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@drawable/count_bg"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>