<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_setting_bg">

    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></ListView>

    <RelativeLayout
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/bg_nav">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/course_type_check"
                android:textSize="18sp"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="460dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="460dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/set_item_bg"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txtSigninup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/selector_setting_item_bottom"
                    android:gravity="center"
                    android:text="@string/signin_signup"
                    android:textColor="@color/txt_setting"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#e0e0e0"/>

            <TextView
                    android:id="@+id/txtProfile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/selector_setting_item_bottom"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/txt_setting"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="460dp"
                android:layout_height="wrap_content"
                android:background="@drawable/set_item_bg"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txtFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/selector_setting_item_bottom"
                    android:gravity="center"
                    android:text="@string/feedback"
                    android:textColor="@color/txt_setting"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#e0e0e0"/>

            <TextView
                    android:id="@+id/txtAboutMe"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/selector_setting_item_bottom"
                    android:gravity="center"
                    android:text="@string/about_me"
                    android:textColor="@color/txt_setting"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#e0e0e0"/>

            <TextView
                    android:id="@+id/txtStarMe"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/selector_setting_item_bottom"
                    android:gravity="center"
                    android:text="@string/star_me"
                    android:textColor="@color/txt_setting"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#e0e0e0"/>

            <TextView
                    android:id="@+id/txtCheckLatest"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/selector_setting_item_bottom"
                    android:gravity="center"
                    android:text="@string/check_latest"
                    android:textColor="@color/txt_setting"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
    </LinearLayout>

    <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/version_number"
            android:textColor="@color/txt_setting_unavailable"/>

    <ImageButton
            android:id="@+id/btn_togo"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:background="@drawable/all_course_menu"/>

</RelativeLayout>